# noname

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  conftest.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/shared/management/commands/: download_nmt_models.py
backend/shared/nmt/: engine.py  manager.py
backend/utilities/audio_transcriber/: apps.py  services.py  urls.py  views.py
backend/utilities/audio_transcriber/tests/: test_transcribe.py
backend/utilities/audio_transcriber/tests/features/: transcribe.feature
backend/utilities/docx_translator/: apps.py  services.py  urls.py  views.py
backend/utilities/docx_translator/tests/: test_translate.py
backend/utilities/docx_translator/tests/features/: translate.feature
backend/utilities/http_client/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/utilities/http_client/migrations/: 0001_initial.py  0002_requestrun.py  0003_requestnode_pre_request_script.py  0004_requestnode_test_script.py
backend/utilities/http_client/tests/: test_http_client.py
backend/utilities/http_client/tests/features/: import.feature  send.feature
backend/utilities/pdf_tools/: apps.py  services.py  urls.py  views.py
backend/utilities/pdf_tools/tests/: test_pdf_tools.py
backend/utilities/pdf_tools/tests/features/: operations.feature
backend/utilities/personal_hub/: apps.py  models.py  serializers.py  urls.py  views.py
backend/utilities/personal_hub/migrations/: 0001_initial.py  0002_bookmark.py
backend/utilities/personal_hub/tests/: test_notes_and_todos.py
backend/utilities/personal_hub/tests/features/: due.feature  notes.feature  todos.feature
backend/utilities/skills_catalog/: apps.py  services.py  urls.py  views.py
backend/utilities/skills_catalog/tests/: test_catalog.py
backend/utilities/skills_catalog/tests/features/: browse.feature  install.feature  steps.feature
backend/utilities/srt_translator/: apps.py  services.py  urls.py  views.py
backend/utilities/srt_translator/tests/: test_translate.py
backend/utilities/srt_translator/tests/features/: translate.feature
backend/utilities/text_translator/: apps.py  serializers.py  urls.py  views.py
backend/utilities/text_translator/tests/: test_translate.py
backend/utilities/text_translator/tests/features/: translate.feature
backend/utilities/youtube_downloader/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/utilities/youtube_downloader/migrations/: 0001_initial.py
backend/utilities/youtube_downloader/tests/: test_download.py
backend/utilities/youtube_downloader/tests/features/: download.feature
docker/: .env.example  docker-compose.yml
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mcp-server/: README.md  pyproject.toml
mcp-server/noname_mcp/: __init__.py  __main__.py  backend.py  pure.py  server.py
plans/: 00-overview.md  01-docx-translator.md  02-text-translator.md  03-youtube-downloader.md  04-dev-tools.md  05-personal-hub.md  06-skills-catalog.md  07-http-client.md  08-mcp-server.md  (+4 more)
(+62 files in other folders)
