[project]
name = "backend"
version = "0.1.0"
description = "noname backend"
authors = [
    {name = "josemsalcedoq",email = "josemsalcedoq@icloud.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
