[project]
name = "backend"
version = "0.1.0"
description = "noname backend"
authors = [
    {name = "josemsalcedoq",email = "josemsalcedoq@icloud.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "argostranslate (>=1.11.0,<2.0.0)",
    "lingua-language-detector (>=2.2.0,<3.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "yt-dlp (>=2026.3.17,<2027.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "srt (>=3.5.3,<4.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "pikepdf (>=10.5.1,<11.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
